# project-django-p

./: pyproject.toml
project_step/: db.sqlite3  manage.py
project_step/project_step/: asgi.py  settings.py  urls.py  wsgi.py
