[tool.poetry]
name = "project-step"
version = "0.1.0"
description = ""
authors = ["erfolen <videbul@gmail.com>"]
readme = "README.md"
packages = [{include = "project_step"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
